# 512Docs

./: .gitattributes  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
2025-11-12-Introduction to LLM APIs/: index.html
2025-11-17-无刷轮腿平衡机器人/: index.html
2025-11-8-createweb/: index.html
2025-11-8-markdown-syntax/: index.html
2025-11-9-Format_specification/: index.html
2025-11-9-Unity引擎/: index.html
2025-11-9-YOLO11 模型训练与使用/: index.html
2025-11-9-editGuide/: index.html
2025-11-9-multi-cooperation/: index.html
ai/: index.html
ai/2025-11-9-YOLO11 模型训练与使用/: index.html
ai/cnn/: index.html
ai/resnet/: index.html
backup/: index.html
basic/2025-11-8-firstDeploy/: index.html
basic/2025-11-8-markdown-syntax/: index.html
basic/2025-11-9-Format_specification/: index.html
basic/2025-11-9-multi-cooperation/: index.html
changelog/: index.html
competition/: index.html
contributor/: index.html
dev-test/: index.html
dev-test/lab512_test/: index.html
docs/: 2025-11-17-无刷轮腿平衡机器人.md  2025-11-8-createweb.md  2025-11-8-markdown-syntax.md  2025-11-9-Format_specification.md  2025-11-9-Unity引擎.md  2025-11-9-multi-cooperation.md  backup.md  changelog.md  contributor.md  index.md  markdown-syntax.md  test.md  无刷轮腿平衡机器人.md
docs/ai/: index.md
docs/basic/: 2025-11-8-markdown-syntax.md  2025-11-9-multi-cooperation.md
docs/competition/: index.md
hardware/: index.html
search/: search_index.json
site/: 404.html  index.html
software/: index.html
tjcu_lab512/: lab_plugin.py
(+15 files in other folders)
